feat: done with vehicle controller
